--- a/client/.gitignore
+++ b/client/.gitignore
@@ -21,3 +21,13 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# 빈 폴더 생성 위한 숨김파일 무시
+!assets/.keep
+!components/.keep
+!hooks/.keep
+!lib/.keep
+!store/.keep
+!styles/.keep
+!utils/.keep
+
