--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon App.js", 
     "server": "node App.js",
     "dev": "nodemon App.js"
   },
