--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon App.js", 
+    "start": "nodemon App.js",
     "server": "node App.js",
     "dev": "nodemon App.js"
   },
@@ -21,6 +21,7 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.27.0"
   },
