--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "react": "^18.2.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
-    "react-infinite-scroll-component": "^6.1.0",
     "react-hook-form": "^7.40.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.7.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router": "^6.4.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
@@ -45,5 +46,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "msw": "^0.49.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
