--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-router": "^6.4.5",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "react-sticky-box": "^1.0.2",
     "styled-components": "^5.3.6",
     "use-context": "^0.0.1",
