--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"aws-sdk": "^2.1282.0",
 		"bcrypt": "^5.1.0",
 		"body-parser": "^1.20.1",
 		"cors": "^2.8.5",
@@ -22,6 +23,8 @@
 		"express-validator": "^6.14.2",
 		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1",
+		"multer-s3": "^2.10.0",
 		"mysql2": "^2.3.3",
 		"sequelize": "^6.27.0"
 	},
